src/components/SudokuSquare/SudokuSquare.module.css
.square {
	--box-shadow-color: var(--glow-color);
	align-items: center;
	background-color: transparent;
	border: 2px solid var(--theme-color);
	box-shadow: 0 0 5px 5px var(--box-shadow-color), 0 0 5px 5px var(--box-shadow-color) inset;
	box-sizing: border-box;
	color: white;
	cursor: pointer;
	display: flex;
	filter: hue-rotate(0deg);
	font-size: 7vh;
	height: 8vh;
	justify-content: center;
	transform-origin: center;
	width: 8vh;
}

.square:not(.prefilled) {
	text-shadow: 0 0 0.2em #ffffff80;
}

.square:hover {
	background-color: #ffffff33;
}

.square.selected {
	background-color: #ffffff33;
	border-color: white;
	border-width: 4px;
	z-index: 101;
}

.thirdColumn {
	margin-right: 10px;
}

.thirdRow {
	margin-bottom: 10px;
}

.prefilled {
	color: var(--glow-color);
	pointer-events: none;
}

.square.bad {
	color: var(--red-glow);
	text-shadow: 0 0 0.2em #ff0000dd;
}

.square.bad:not(.prefilled) {
	background-color: #ff000033;
	color: red;
}

